# docker-tartare

./: docker-tartare.bash  pyproject.toml
src/docker_tartare/: __init__.py
