[project]
name = "docker-tartare"
version = "0.2.0"
description = "Docker TAR manipulation tool"
readme = "README.md"
authors = [
    { name = "Sygmei", email = "3835355+Sygmei@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
docker-tartare = "docker_tartare:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
